--- a/README
+++ b/README
@@ -1,6 +1,20 @@
 htop
 ====
 
+Updates
+-------
+
+by Michal Novotny <mignov@gmail.com>
+
+Feb, 2015
+
+The major update is to provide sensors progress bar managed by the sensors.sh shell script. It uses the sensors binary output per CPU cores and computes
+the average temperature in Celsius. It's good to monitor core temperatures if any detected, if none detected, the default average value and maximum value
+falls back to value of -1 degree (noted as -1C).
+
+Original htop
+-------------
+
 by Hisham Muhammad <hisham@gobolinux.org>
 
 May, 2004 - January, 2014
